# AccesibilityHelper

./: pyproject.toml
app/: config.py  main.py
app/common/middleware/: middleware.py
app/common/templates/: chat.py  url.py
app/routes/: assistance.py  utils.py
app/services/langchain/: agents.py  callback.py  llms.py  tools.py
app/services/prompt/: assistance_prompt.py
app/services/selenium/: webdriver.py
app/services/utils/: agent_util.py  selenium_util.py
